<?xml version="1.0" encoding="UTF-8" ?>
<resources>
    <string name="app_name">Survey</string>
    <string name="OK">OK</string>
    <string name="main_tips">Please confirm that you accept the requests before answering questions</string>
    <string name="choose_scanCanceled">Cancel the scan</string>
    <string name="choose_question">Question</string>
    <string name="choose_answerQuestion">Please answer the question!</string>
    <string name="single">single</string>
    <string name="multichoice">multiple</string>
    <string name="edit">edittext</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="finish">finish</string>
    <string name="choiceHint">Please enter options here</string>
    <string name="invalid_operation">Invalid operation!</string>
    <string name="invalid_operation_noTitle">You must enter a title first！</string>
    <string name="invalid_operation_noType">You must first select a type</string>
    <string name="invalid_operation_singleChoice">You must add at least one option！</string>
    <string name="invalid_operation_multipleChoices">You must add at least two options！</string>
    <string name="Suggestion">Long press the picture to save the QR.</string>
    <string name="permissionFailed">Your request has been denied permission to store, applications can not save it to your local!</string>
    <string name="LongClickChoice1">Save QR</string>
    <string name="tv_main_question">Please enter the title content!</string>
    <string name="ed_main_question">Enter title here</string>
    <string name="tv_main_type">Please select the type of question!</string>
    <string name="tv_main_choices">Please input options content!</string>
    <string name="changelanguage">英->中</string>
    <string name="next">next</string>
    <string name="saveSuccessed">Save successed!</string>
    <string name="saveFailed">Save failed!</string>
    <string name="alertTitle">Warning!</string>
    <string name="alertSwitchLanguage">Switch the language</string>
    <string name="alertCancel">cancel</string>
    <string name="alertContent">If you switch languages, any changes you have made will not be saved. Do you want to continue?</string>
    <string name="report_permissionRequest">We need to get your permisson of: READ_PHONE_STATE,ACCESS_FINE_LOCATION, ACCESS_COARSE_LOCATION so that we can get your IMEI and your location. We need these information to add to database</string>
    <string name="report_wrapwrong">wrap wrong</string>
    <string name="report_exit">Exit the app</string>
    <string name="report_canceled">Canceled</string>
    <string name="report_resultSavedIn">Result has been saved in</string>
    <string name="report_getPhoneState">Permission of getting phone state is not allowed!</string>
    <string name="report_getLocation">Permission of getting location information is not allowed</string>
    <string name="report_locationFailed">Location information not obtained</string>
    <string name="lock_exit">Exit the APP?</string>
    <string name="lock_exit2">Are you sure to Exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lock_noLock">You have not set up a screen lock</string>
    <string name="upload_tips">Please connect to network and ensure you phone and computer in the same LAN</string>
    <string name="upload_success">success to upload</string>
    <string name="upload_failed">failed</string>
    <string name="upload_failedTips">fail to upload,please ensure your computer and phone on the same network</string>
    <string name="svyu">SvyU</string>
    <string name="welcome">WELCOME TO\nTAKE PART IN OUR SURVEY!</string>
    <string name="welcome_1">Before we start,here are things you should know:</string>
    <string name="welcome_start">LET\'S START!</string>
    <string name="welcome_accept">I accept these requests.</string>
    <string name="welcome4">-Please follow the step we designed for you and don\'t skip any questions.</string>
    <string name="welcome_2">-Please be honest when making your choice.</string>
    <string name="welcome3">-We are just doing a reaserch so you don\'t have to fake your information.</string>
    <string name="finish_thankyou">THANK YOU\nFOR YOUR ANSWERS!</string>
    <string name="exit">Exit</string>
    <string name="upload">UPLOAD</string>
    <string name="report_tips">1</string>
    <string name="server">your server :192.0.0.1:8080</string>
    <string name="choose_chooseSurvey">PLEASE CHOOSE AN SURVEY</string>
    <string name="let_s_begin">LET\'S BEGIN!</string>
    <string name="choose_xmlTips">Please permit openning your camera to scan the QR to start the survey.\n\nIf you want to build you questionnaire,please permit the storage permission.</string>
    <string name="scan_qrcode">Scan QRcode</string>
    <string name="createQuestionnaire">create your questionnaire</string>
</resources>
