<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/tv_question"
            android:text="@string/tv_main_question"
            android:textSize="18sp"
        />






    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:id="@+id/ed_question"
        android:hint="@string/ed_main_question"
        ></EditText>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_main_type"
        android:textSize="18sp"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rb_single"
            android:text="@string/single"
            ></RadioButton>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rb_multichoice"
            android:text="@string/multichoice"
            ></RadioButton>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:id="@+id/rb_edit"
            android:layout_weight="1"
            ></RadioButton>


    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_main_choices"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/btn_add"
            android:onClick="myClick"
            android:text="@string/add"
            android:textSize="18sp"
            ></Button>


        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/btn_delete"
            android:text="@string/delete"
            android:onClick="myClick"
            android:textSize="18sp"
            ></Button>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:id="@+id/linear1"
        >


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/btn_next"
            android:text="@string/next"
            android:onClick="myClick"
            android:textSize="18sp"
            ></Button>


        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/btn_finish"
            android:text="@string/finish"
            android:onClick="myClick"
            android:textSize="18sp"
            ></Button>


    </LinearLayout>

</LinearLayout>

</ScrollView>