<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <!--  Start : Your code should be within this block -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/svyu"
        android:textColor="@color/white"
        android:textSize="@dimen/h1"
        android:background="@color/colorPrimary">
    </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/outPad"
            >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="@dimen/h1"
                android:layout_marginTop="20dp"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="@dimen/indent_lit"
                android:layout_marginRight="@dimen/indent_lit"
                android:text="@string/welcome_1"
                android:textSize="@dimen/h3"
                android:textColor="@color/gray">
            </TextView>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="@dimen/indent_lit"
                android:layout_marginLeft="@dimen/indent_lit"
                android:text="@string/welcome_2"
                android:textSize="@dimen/h4"
                android:textColor="@color/gray">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/indent_lit"
                android:layout_marginLeft="@dimen/indent_lit"
                android:text="@string/welcome3"
                android:textSize="@dimen/h4"
                android:textColor="@color/gray">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/indent_lit"
                android:layout_marginLeft="@dimen/indent_lit"
                android:text="@string/welcome4"
                android:textSize="@dimen/h4"
                android:textColor="@color/gray">
            </TextView>

                <Button
                    android:id="@+id/btn_changeLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_toRightOf="@id/tv_question"
                    android:onClick="myClick"
                    android:text="@string/changelanguage"
                    android:textSize="15sp"></Button>


            </LinearLayout>
            </ScrollView>
        </LinearLayout>

    <CheckBox
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_accept"
        android:textColor="@color/black"
        android:textSize="@dimen/h3"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"></CheckBox>
        <Button
            android:id="@+id/btn_start"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="@dimen/btn_bottom"
            android:layout_marginLeft="@dimen/outPad"
            android:layout_marginRight="@dimen/outPad"
            android:text="@string/welcome_start"
            android:textSize="@dimen/h3"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="start">
        </Button>
    <!-- END    : Your code should be within this block -->
</LinearLayout>